--- a/src/override/override.html
+++ b/src/override/override.html
@@ -23,6 +23,8 @@
 		font-size: 100%;
 		background-image: url('../../image/Picture1.png');
 		background-repeat: no-repeat;
+		background-attachment: fixed;
+		background-size: 100% 100%;
 		color: #4a5568;
 	}
 	div.main{
