insert and rm complete && add debug button

--- a/src/override/override.html
+++ b/src/override/override.html
@@ -65,7 +65,7 @@
 		width:8%;
 		padding:10px;
 		background:transparent;
-		border-radius: :2px;
+		border-radius: 2px;
 		font-weight: bold;
 		color:brown;
 		cursor:pointer;
