--- a/src/override/override.html
+++ b/src/override/override.html
@@ -6,6 +6,7 @@
 	<!-- <script  src="popup.js">
 					</script> -->
 
+	<link rel="stylesheet" href="../../css/paperplate.css">
 	<style>
 
 	/* h1{
@@ -63,7 +64,7 @@
 		top:260px;left:300px;
 		overflow-wrap:normal;
 	}
-	button{
+	 button{
 		height:6%;
 		width:8%;
 		padding:10px;
@@ -76,10 +77,10 @@
 		position:absolute;
 		top: 460px; left: 520px;
 	}
-	button:hover{
+	/* button:hover{
 		background:brown;
 		color:white;
-	}
+	} */
 
 	/* paperplate effect */
 
@@ -91,6 +92,7 @@
 
 	<script type="text/javascript" src="../../js/p5.min.js"></script>
 	<script type="text/javascript" src="../../js/p5.dom.min.js"></script>
+	<script type="text/javascript" src="../../js/gsap.min.js"></script>
 	<script type="text/javascript" src="../../js/sketch.js"></script>
 
 <body>
