--- a/src/override/override.html
+++ b/src/override/override.html
@@ -25,6 +25,9 @@
 		position:absolute;
 		top:15%; left:15%;
 }
+	img.btn_submit {
+		-webkit-transform: rotate(20deg) skewY(20deg);
+	}
 	div.main{
 		display:flex;
 		height:100%;
@@ -75,6 +78,7 @@
 	p{
 	z-index:4;
 	position:absolute;
+	width:50%;
 	top:60%;left:23%;
 	font-family: 'Playfair display', Georgia, Serif;
 	font-weight: 700;
@@ -143,7 +147,11 @@
 					<div class="wing wing4"></div>
 				</div> -->
 			</div>
-
+			<!-- <div class="wrapper">
+			    <div class="typing-demo">
+			      This is a typing demo.
+			    </div>
+			</div> -->
 
 </body>
 </html>
